--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -38,6 +38,34 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <RatingBar
+                    android:id="@+id/ratingStars"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="60dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/sendRatingStars"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="60dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_button"
+                    android:text="send"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/textView13"
                     android:layout_width="wrap_content"
@@ -152,14 +180,16 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/button2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="50dp"
                     android:background="@drawable/background_button"
+                    android:fontFamily="sans-serif-medium"
                     android:onClick="groceryList"
                     android:text="Grocery List "
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -175,10 +205,48 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="15dp"
                     android:background="@drawable/background_button"
+                    android:fontFamily="sans-serif-medium"
                     android:onClick="backToMainRecipe"
                     android:text="back"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="158dp"
+                    android:background="@drawable/background_button"
+                    android:fontFamily="sans-serif"
+                    android:text="time"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="normal"></androidx.appcompat.widget.AppCompatButton>
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/button"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginBottom="63dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/black"
+                    android:textSize="40sp" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
