--- a/app/src/main/res/layout/activity_main_recipes.xml
+++ b/app/src/main/res/layout/activity_main_recipes.xml
@@ -8,7 +8,9 @@
     tools:context=".MainRecipes.MainRecipesActivity">
 
 
-    <ScrollView
+
+<ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,6 +33,17 @@
                 android:text="World of Recipes"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
+
+            <androidx.appcompat.widget.SearchView
+            android:layout_width="410dp"
+            android:layout_height="44dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="2dp"
+            app:layout_constraintBottom_toTopOf="@+id/grid_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/searchView"></androidx.appcompat.widget.SearchView>
 
             <TextView
                 android:id="@+id/textView15"
@@ -89,25 +102,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:scrollbars="horizontal" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/createRecipe"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-
-                android:background="@drawable/background_button"
-                android:onClick="createRecipe"
-                android:text="createRecipe"
-                android:textColor="@color/white"
-                android:textStyle="normal" />
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="userprofile"
-                android:text="Button" />
 
         </LinearLayout>
     </ScrollView>
