--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -186,28 +186,8 @@
                     android:layout_marginTop="50dp"
                     android:background="@drawable/background_button"
                     android:fontFamily="sans-serif-medium"
-                    android:onClick="groceryList"
-                    android:text="Grocery List "
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="@drawable/background_button"
-                    android:fontFamily="sans-serif-medium"
-                    android:onClick="backToMainRecipe"
-                    android:text="back"
+                    android:onClick="addGroceryList"
+                    android:text="Add To Grocery List "
                     android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
