--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -70,6 +70,14 @@
                     android:onClick="addPhoto"
                     android:text="add photo"
                     android:textColor="@color/white" />
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
 
             <LinearLayout
