--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -211,20 +211,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/saveRecipe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/background_button"
-                    android:onClick="saveRecipe"
-                    android:text="save recipe"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-            </LinearLayout>
+                android:orientation="horizontal"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -259,6 +246,21 @@
                     android:textColor="@color/black"
                     android:textSize="40sp" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewSave"
+                    android:layout_width="2dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="250dp"
+                    android:layout_weight="1"
+                    android:onClick="saveRecipe"
+                    app:srcCompat="@drawable/savepicture" />
             </LinearLayout>
 
 
