--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -22,16 +22,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="serif-monospace"
-                android:text="Recipe:"
-                android:textColor="@color/white"
-                android:textSize="34sp"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="serif-monospace"
+                    android:text="Recipe:"
+                    android:textColor="@color/white"
+                    android:textSize="34sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/imageViewSave"
+                    android:layout_width="2dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_weight="1"
+                    android:onClick="saveRecipe"
+                    app:srcCompat="@drawable/savepicture" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -70,6 +88,7 @@
                     android:id="@+id/imageView4"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/whatsapp_image_2023_11_16_at_10_09_55" />
             </LinearLayout>
@@ -147,7 +166,7 @@
 
                 <TextView
                     android:id="@+id/preparationRecipe"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="60dp"
@@ -207,13 +226,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="170dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal"/>
-
-            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -253,14 +265,6 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageViewSave"
-                    android:layout_width="2dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="250dp"
-                    android:layout_weight="1"
-                    android:onClick="saveRecipe"
-                    app:srcCompat="@drawable/savepicture" />
             </LinearLayout>
 
 
