--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -67,6 +67,7 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background_button"
+                    android:fontFamily="sans-serif"
                     android:onClick="addPhoto"
                     android:text="add photo"
                     android:textColor="@color/white" />
@@ -93,12 +94,13 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/ingred"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="70dp"
                     android:background="@drawable/background_button"
+                    android:fontFamily="sans-serif"
                     android:onClick="addIngredients"
-                    android:text="add"
+                    android:text="add Ingrediant"
                     android:textColor="@color/white"
                     android:textStyle="normal" />
 
@@ -121,9 +123,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:layout_marginRight="150dp"
+                android:layout_marginRight="130dp"
                 android:fontFamily="casual"
-                android:text="preparation"
+                android:text="preparation:"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
