--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -28,14 +28,14 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView12"
+                    android:id="@+id/nameRecipe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:fontFamily="serif-monospace"
-                    android:text="Recipe:"
+                    android:text="Recipe: "
                     android:textColor="@color/white"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -44,7 +44,7 @@
                     android:id="@+id/imageViewSave"
                     android:layout_width="2dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="120dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginTop="50dp"
                     android:layout_weight="1"
                     android:onClick="saveRecipe"
@@ -99,33 +99,6 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginTop="60dp"
-                    android:fontFamily="serif-monospace"
-                    android:text="Name:"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/nameRecipe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="60dp"
-                    android:text="name"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -143,6 +116,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="60dp"
+                    android:layout_marginRight="10dp"
                     android:text="TextView"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -217,7 +191,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/background_button"
-                    android:fontFamily="sans-serif-medium"
+                    android:fontFamily="sans-serif"
                     android:onClick="addGroceryList"
                     android:text="Grocery List "
                     android:textColor="@color/white"
@@ -233,14 +207,14 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/timer"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/background_button"
                     android:fontFamily="sans-serif"
-                    android:text="time"
+                    android:text="time to cook"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/white"
                     android:textSize="20sp"
