--- a/app/src/main/res/layout/main_recycle_recipes.xml
+++ b/app/src/main/res/layout/main_recycle_recipes.xml
@@ -6,21 +6,21 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="202dp"
-        android:layout_height="184dp"
+        android:id="@+id/bitmap"
+        android:layout_width="194dp"
+        android:layout_height="187dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.102"
-        app:srcCompat="@drawable/whatsapp_image_2023_11_16_at_10_09_55"
-        />
+        app:srcCompat="@drawable/whatsapp_image_2023_11_16_at_10_09_55" />
 
     <TextView
         android:id="@+id/nameRecipe1"
@@ -33,6 +33,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/bitmap"
         app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
