--- a/app/src/main/res/layout/activity_main_recipes.xml
+++ b/app/src/main/res/layout/activity_main_recipes.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/whatsapp_image_2023_12_08_at_17_40_07"
+    android:background="@drawable/mainrecipes"
     tools:context=".MainRecipes.MainRecipesActivity">
 
 
-
-<ScrollView
+    <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,21 +32,24 @@
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="cursive"
                 android:gravity="center"
                 android:text="World of Recipes"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
+                android:textColor="#B19470"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.SearchView
-            android:layout_width="410dp"
-            android:layout_height="44dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="2dp"
-            app:layout_constraintBottom_toTopOf="@+id/grid_view"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/searchView"></androidx.appcompat.widget.SearchView>
+                android:id="@+id/searchView"
+                android:layout_width="410dp"
+                android:layout_height="44dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="2dp"
+                app:layout_constraintBottom_toTopOf="@+id/grid_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.SearchView>
 
             <TextView
                 android:id="@+id/textView15"
@@ -52,7 +58,7 @@
                 android:layout_marginTop="20dp"
                 android:text="5 stars:"
 
-                android:textColor="@color/white"
+                android:textColor="#B19470"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -72,7 +78,7 @@
                 android:layout_marginTop="20dp"
                 android:text="Breakfast/lunch:"
 
-                android:textColor="@color/white"
+                android:textColor="#B19470"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -92,7 +98,7 @@
                 android:layout_marginTop="20dp"
                 android:text="sweets:"
 
-                android:textColor="@color/white"
+                android:textColor="#B19470"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
