--- a/app/src/main/res/layout/activity_grocery_list.xml
+++ b/app/src/main/res/layout/activity_grocery_list.xml
@@ -46,6 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="5dp"
+                    android:fontFamily="serif"
                     android:text="ingredients"
                     android:textSize="20sp" />
             </LinearLayout>
