--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
             android:layout_marginTop="70dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/buttonmain_style"
+            android:fontFamily="serif"
             android:onClick="signIn"
             android:text="Sign In"
             android:textColor="#1B1916"
@@ -66,6 +67,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/buttonmain_style"
+            android:fontFamily="serif"
             android:onClick="reg"
             android:text="registration"
             android:textColor="#0C0C0B"
