--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -71,12 +71,13 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/sendRatingStars"
-                    android:layout_width="120dp"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="40dp"
                     android:layout_marginTop="60dp"
                     android:layout_weight="1"
                     android:background="@drawable/background_button"
+                    android:fontFamily="serif"
                     android:text="send"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
@@ -151,6 +152,7 @@
                     android:layout_marginTop="60dp"
                     android:text="TextView"
                     android:textSize="20dp" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -189,18 +191,27 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/addgroceryList"
-                    android:layout_width="170dp"
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="40dp"
-                    android:background="@drawable/background_button"
-                    android:fontFamily="sans-serif"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
+                    android:fontFamily="serif-monospace"
+                    android:text="add to grocery list:"
+                    android:textColor="#B19470"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/addgroceryList"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
                     android:onClick="addGroceryList"
-                    android:text="Grocery List "
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    app:srcCompat="@drawable/plus" />
 
             </LinearLayout>
 
