--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -111,7 +111,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/background_button"
-        android:fontFamily="sans-serif-condensed-medium"
+        android:fontFamily="serif"
         android:onClick="createSubmit"
         android:text="create an account"
         android:textColor="@color/white"
