--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -28,10 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="70dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="cursive"
         android:text="Sign In"
         android:textColor="#B19470"
-        android:textSize="34sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginEnd="10dp"
 
         android:background="@drawable/background_button"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="serif"
         android:onClick="signInSubmit"
         android:text="continue"
         android:textColor="@color/white"
@@ -68,7 +68,7 @@
         android:layout_marginBottom="40dp"
 
         android:background="@drawable/background_button"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="serif"
         android:onClick="toReg"
         android:text="need an account"
         android:textColor="@color/white"
