--- a/app/src/main/res/layout/main_recycle_recipes.xml
+++ b/app/src/main/res/layout/main_recycle_recipes.xml
@@ -2,14 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/background_pic">
+    android:layout_width="160dp"
+    android:layout_height="160dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="2dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/nameRecipe1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,12 +16,8 @@
 
         <ImageView
             android:id="@+id/bitmap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="110dp"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             app:srcCompat="@drawable/whatsapp_image_2023_11_16_at_10_09_55" />
     </androidx.cardview.widget.CardView>
@@ -31,9 +26,10 @@
         android:id="@+id/nameRecipe1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="2dp"
         android:text="pasta"
+        android:textColor="#120505"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
